continuum/autonomous/v031-quality-bundle/reports/v031-cluster-M3a-red-capture.txt
   Compiling tldr-cli v0.3.0 (/Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli)
error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> crates/tldr-cli/tests/salsa_lang_isolation_test.rs:38:18
   |
38 |     let py_key = QueryKey::new("calls", args_hash, Language::Python);
   |                  ^^^^^^^^^^^^^                     ---------------- unexpected argument #3 of type `Language`
   |
note: associated function defined here
  --> /Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli/src/commands/daemon/salsa.rs:65:12
   |
65 |     pub fn new(query_name: impl Into<String>, args_hash: u64) -> Self {
   |            ^^^
help: remove the extra argument
   |
38 -     let py_key = QueryKey::new("calls", args_hash, Language::Python);
38 +     let py_key = QueryKey::new("calls", args_hash);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> crates/tldr-cli/tests/salsa_lang_isolation_test.rs:39:18
   |
39 |     let ts_key = QueryKey::new("calls", args_hash, Language::TypeScript);
   |                  ^^^^^^^^^^^^^                     -------------------- unexpected argument #3 of type `Language`
   |
note: associated function defined here
  --> /Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli/src/commands/daemon/salsa.rs:65:12
   |
65 |     pub fn new(query_name: impl Into<String>, args_hash: u64) -> Self {
   |            ^^^
help: remove the extra argument
   |
39 -     let ts_key = QueryKey::new("calls", args_hash, Language::TypeScript);
39 +     let ts_key = QueryKey::new("calls", args_hash);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> crates/tldr-cli/tests/salsa_lang_isolation_test.rs:80:18
   |
80 |     let py_key = QueryKey::new("impact", args_hash, Language::Python);
   |                  ^^^^^^^^^^^^^                      ---------------- unexpected argument #3 of type `Language`
   |
note: associated function defined here
  --> /Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli/src/commands/daemon/salsa.rs:65:12
   |
65 |     pub fn new(query_name: impl Into<String>, args_hash: u64) -> Self {
   |            ^^^
help: remove the extra argument
   |
80 -     let py_key = QueryKey::new("impact", args_hash, Language::Python);
80 +     let py_key = QueryKey::new("impact", args_hash);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> crates/tldr-cli/tests/salsa_lang_isolation_test.rs:81:18
   |
81 |     let ts_key = QueryKey::new("impact", args_hash, Language::TypeScript);
   |                  ^^^^^^^^^^^^^                      -------------------- unexpected argument #3 of type `Language`
   |
note: associated function defined here
  --> /Users/cosimo/Desktop/PatchWork/tldr-code/crates/tldr-cli/src/commands/daemon/salsa.rs:65:12
   |
65 |     pub fn new(query_name: impl Into<String>, args_hash: u64) -> Self {
   |            ^^^
help: remove the extra argument
   |
81 -     let ts_key = QueryKey::new("impact", args_hash, Language::TypeScript);
81 +     let ts_key = QueryKey::new("impact", args_hash);
   |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `tldr-cli` (test "salsa_lang_isolation_test") due to 4 previous errors
